force-app/main/default/objects/ReplacementOrderSettings__c/ReplacementOrderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ReplacementOrderSettings</label>
</CustomObject>