force-app/main/default/objects/ReplacementOrderSettings__c/fields/QualityCheckCaseSP__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckCaseSP__c</fullName>
    <label>QualityCheckCaseSP</label>
    <type>TextArea</type>
</CustomField>