force-app/main/default/objects/ReplacementOrderSettings__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>StageName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>