force-app/main/default/objects/ReplacementOrderSettings__c/fields/Warranty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Amount__c</fullName>
    <label>Warranty Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>